Externalise some strings